Added ability to set custom aliases

--- a/spec/logger_suite.html
+++ b/spec/logger_suite.html
@@ -93,8 +93,23 @@ span.xdescribe a:active {
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
-                <span>'TODO: aliases'</span>
-            </p><div></div></div><div style=""><p class="stripe">
+                <span>'aliases'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should not create aliases by default'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should create aliases if opting-in'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should accept an object of custom aliases'</span>
+            </p></div></div></div><div style=""><p class="stripe">
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
