Fixed date formatter
- Module now defaults to date format rather than the base format
- By default, date is logged (just as color is on by default)
- Added disableDate() and enableDate() APIs
- Added a few tests, but need more :)

--- a/spec/onf-logger_suite.html
+++ b/spec/onf-logger_suite.html
@@ -78,7 +78,7 @@ span.xdescribe a:active {
 </head>
 
 <body>
-<h3>Test suite 'logger'</h3>
+<h3>Test suite 'onf-logger'</h3>
 <div style=""><p class="stripe">
                 <span class="it">
                     it -> 
@@ -110,6 +110,16 @@ span.xdescribe a:active {
                 </span>
                 <span>'should accept an object of custom aliases'</span>
             </p></div></div></div><div style=""><p class="stripe">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'formatting'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'date'</span>
+            </p><div></div></div></div></div><div style=""><p class="stripe">
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
@@ -179,6 +189,21 @@ span.xdescribe a:active {
                     it -> 
                 </span>
                 <span>'should allow colors to be enabled'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'date'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should allow the date to be disabled'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should allow the date to be enabled'</span>
             </p></div></div></div><div style="padding-left: 50px;"><p class="">
                 <span class="describe">
                     (<a href="#">describe</a>)
