--- a/spec/onf-logger_suite.html
+++ b/spec/onf-logger_suite.html
@@ -115,6 +115,11 @@ span.xdescribe a:active {
                 </span>
                 <span>'formatting'</span>
             </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should allow access to the formatter'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
                 <span class="describe">
                     (<a href="#">describe</a>)
                 </span>
@@ -229,6 +234,41 @@ span.xdescribe a:active {
                     it -> 
                 </span>
                 <span>'should throw when calling a non-existent but previously-defined function'</span>
+            </p></div></div></div></div></div><div style=""><p class="stripe">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'tpl'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'dateTpl'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should default to {Y}-{m}-{d}'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should allow for it to be set'</span>
+            </p></div></div></div><div style="padding-left: 50px;"><p class="">
+                <span class="describe">
+                    (<a href="#">describe</a>)
+                </span>
+                <span>'timeTpl'</span>
+            </p><div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should default to {H}:{i}:{s}.{ms}'</span>
+            </p></div><div style="padding-left: 50px;"><p class="">
+                <span class="it">
+                    it -> 
+                </span>
+                <span>'should allow for it to be set'</span>
             </p></div></div></div></div></div>
 
 <script>
